syntax = "proto3";

option java_outer_classname = "AudioProcessPipeline";

message AudioProcessRequest {
  int32 sampleRate = 1;
  // float encoded in little endian
  bytes audioSamplesChannel1 = 2;
}

message Transformer {
  enum TransformerType {
    SILENCE = 0;
//    TYPE2 = 1;
//    TYPE3 = 2;
  }
  TransformerType type = 1;
  optional int64 typeSilenceDurationUs = 2;
//  optional int64 typeType2Param2 = 3;
//  optional int64 typeType2Param3 = 4;
//  optional int64 typeType2Param4 = 5;
//  optional int64 typeType3Param5 = 6;
//  optional int64 typeType3Param6 = 7;
}

message Fragment {
  int64 startUs = 1;
  int64 endUs = 2;
  Transformer transformer = 3;
}

message AudioProcessResponse {
  repeated Fragment fragments = 1;
}